--- a/代码检查-配置文件.md
+++ b/代码检查-配置文件.md
@@ -1,5 +1,8 @@
+> 符合自身场景的就是最好的，希望能给大伙带来参考
+上一篇说的详细配置文件如下
+
 #### tslint.json
-```
+```json
 {
     "defaultSeverity": "error",
     "extends": [
@@ -164,8 +167,11 @@
 }
 ```
 
+----------------------------------我是分割线 咔 咔 咔 咔----------------------------------
+
+
 #### .eslintrc.js
-```
+```javascript
 module.exports = {
     // 全局变量
     'env': {
