U 背包算法更新

--- a/背包算法实践.md
+++ b/背包算法实践.md
@@ -1,4 +1,16 @@
-# 前端红包合并逻辑-简单示意图
+去年因为工作中的某个应用场景，需要使用到动态规划，为此花了些时间啃了啃背包算法
+> 为啥去年的东西，今年才写粗来，应该是懒，不是我的原因
+
+### 动态规划
+先简单说下什么是动态规划
+
+### 背包算法
+
+
+
+### 实例-红包合并
+
+#### 场景
 
 > 根据投资金额 W 从 N 个红包中选出一个或多个红包，已达成当前投资金额下最优的红包组合
 
@@ -57,13 +69,55 @@ investAmout:10000 // 背包容量
 所以在最前面需要对数组进行排序，排序规则：红包金额小大排序,若同等金额，优先过期时间早的放在最后，若过期时间相同，抵扣比例高的放在最后
 
 
-### 投资界面流程图
-![redpack-one](image/redpack-one.jpg)
 
-## 进入红包列表渲染逻辑
 
-![redpack-two](image/redpack-two.jpg)
 
-## 红包选择操作
+```JavaScript
+/**
+     * @description
+     * 01背包算法
+     * @author lizc
+     * @private
+     * @param {any} dataList 
+     * @param {any} all 
+     * @returns 
+     * @memberof ChooseRedPack
+     */
+    private knapsack(dataList, all) {
+        const returnList = [];
+        for (let i = 0; i < dataList.length; i++) {
+            // 构建二维数组
+            returnList[i] = [];
+            for (let j = 0; j < all; j++) { // 分割背包
+                const currentBagWeight = j + 1; // 此时背包重量
+                const currentWeight = dataList[i]._gcdrangeBegin; // 此时物品重量
+                const currentValue = dataList[i].amount; // 此时的价值
+                const lastW = currentBagWeight - currentWeight; // 此时背包重量减去此时要添加的物品后的重量
 
-![redpack-three](image/redpack-three.jpg)
+                // 求子问题最优解，并记录
+                let fV = lastW >= 0 ? currentValue : 0;
+                fV = fV + (i > 0 && returnList[i - 1][lastW - 1] ? returnList[i - 1][lastW - 1] : 0);
+                const nV = i > 0 && returnList[i - 1][j] ? returnList[i - 1][j] : 0;
+                returnList[i][j] = Math.max(fV, nV);
+            }
+        }
+
+        // 回溯算法，算出选择的商品
+        let y = all - 1;
+        const selectItem = [];
+        let i = dataList.length - 1;
+
+        while (i > -1) {
+            if (returnList[i][y] === (returnList[i - 1] && returnList[i - 1][y - dataList[i]._gcdrangeBegin] || 0) + dataList[i].amount) {
+                selectItem.push(dataList[i]);
+                y -= dataList[i]._gcdrangeBegin;
+            }
+            i--;
+        }
+
+        return selectItem;
+    }
+```
+
+### 小结
+谁说前端狗就不用懂算法的~  哈哈~  不要给自己设限~
