--- a/背包算法实践.md
+++ b/背包算法实践.md
@@ -1,7 +1,7 @@
 去年因为工作中的某个应用场景，需要使用到动态规划，为此花了些时间啃了啃背包算法
 > 为啥去年的东西，今年才写粗来，应该是懒，不是我的原因
 
-### 动态规划
+### 动态规划 Dynamic Programming
 先简单说下什么是动态规划
 
 ### 背包算法
