--- a/背包算法实践.md
+++ b/背包算法实践.md
@@ -4,6 +4,18 @@
 ### 动态规划 Dynamic Programming
 先简单说下什么是动态规划
 
+引用维基百科的一句话 `通过把原问题分解为相对简单的子问题的方式求解复杂问题的方法`，通俗的理解就是，将一个复杂的问题拆解成相似的多个子问题，然后依次解决各个子问题，同时因为子问题的相似性，在计算过程中，需要同时将子问题的结果保存起来，在下一个同样的子问题时，直接查找即可，这样在同样的问题上就不会再次花费时间，所以核心思想就是拆解与记录
+
+那么什么情况下可以使用动态规划呢 ？
+需要具备以下特征
+1. 有最优子结构
+
+如果一个问题最优的解决方案可以通过最优它的子问题的解决方案来获取，那么这个问题就用最优子结构的属性，简单的理解就是用子问题的最优解来构造原问题的最优解
+
+2. 子问题无后效性。即子问题的解一旦算出，就不会受到后续的子问题的影响而发生改变
+
+3. 子问题重叠性质，即每次产生的子问题都不是一个全新的问题，是在前一个子问题的基础上变化而来的，所以子问题之间需要具有重叠性，这也是动态规划高效率的一个原因
+
 ### 背包算法
 
 
