--- a/项目0到1的一些感想.md
+++ b/项目0到1的一些感想.md
@@ -1,5 +1,5 @@
-近期负责一个项目的开发，带着几个小伙伴，从前期的需求评审到项目整体设计，最后上线，历时了快一个月的时间。这个项目算是个小项目，但毕竟算是第一个由自己来扮演负责人角色的项目。
-这个项目让自己学到了很多，同时也发现了自己很多的不足，写篇文章总结下项目从的0到1的过程
+近期上线了一个新的项目，从前期的需求评审到项目整体设计，最后上线，历时了快一个月的时间。虽然是个小项目，但是由自己从头开始跟的项目。
+这个项目让自己学到了很多，同时也发现了自己很多的不足，写篇文章总结下项目从的0到1的过程以及这段时间的一些感悟
 
 ### 技术选型
 先说下项目的组成结构，web项目，由前端+后台+服务端组成，技术栈为：前端采用vue，后台使用react，服务端使用node，数据库使用mysql，缓存使用redis，这个技术栈整体看来，还是比较符合潮流的。
@@ -47,6 +47,17 @@
 
 复盘的作用在于回归整个开发历程，遇到了哪些问题、如何解决、哪些未能解决等等看似零碎的部分，将这些部分汇总起来，汇总的过程看似对项目，但实际上是在对自己进行审视，哪些让自己成长了，哪些还有很大的不足、及自己没做好的原因等，开发路漫漫，抬头看看天才能知道自己的位置~
 
-### 小结
+### 感悟
 
-文章写得有点比较粗，其实每个小节都有很深的学问，目前了解的还比较肤浅，多尝试、多思考、善沟通、才能往前走鸭
+文章写得有点流水账了，在每个点上，自己懂得还很肤浅。
+记录下自己最近的一些心得吧
+
+1. 市场上大部分的程序员职位都是开发工程师，开发工程师的定位应该是：以完成功能需求为主，基本上是围绕着产品经理提出的需求文档转，很多人就吐槽，一直在做功能，没有提升的空间，但我不这么认为，在我们不能改变自己开发工程师的职位时，要做的应当是少点抱怨，多自我挖掘，在完美实现功能的同时，深挖其中的技术点，况且能做到写出来的功能健壮，就足够考验人了，其理解能力、逻辑能力绝对不是一般的水准
+
+2. 切忌浮躁，敬畏技术，不要会用一个技术了，就认为自己能掌握了，多会几个技术点，便说自己遇到瓶颈了。沉淀下来，好好啃一啃，比跟风、自我焦虑强的多。知其然，而知其所以然
+
+3. 一家公司的开发任务，伴随着在职时间越长，便越会顺手，老油条和晋升达人也在悄悄的拉开差距，要及时走出自己的舒适区，多去承担难点，让自己在工作上`难过`，未来才能`好过`
+
+4. `那就先简单做` 这句话在开发间经常听到，既然都确定去做了，那为什要简单做呢？；写业务时，遇到难点，`哎，就就这么写吧，反正也没问题`；以上现象，说到底，一句话：懒于思考，安于现状。多思考，注重细节、端正态度，做一个不将就的coder
+
+5. 持续学习，有句话说的好：淘汰你的不是你的同龄人，也不是这个社会，而是你自己在原地踏步。互联网的更新速度令人咂舌，令人焦虑啊，一群人整体喊着跟不上了啊，学不动了啊，可是马拉松是没有暂停的，咬紧牙，少去瞎比比，学习是枯燥的，但要知道它才是给你带来红利的基础，是你跑下去的资本
