--- a/这些年面试的压过的路.md
+++ b/这些年面试的压过的路.md
@@ -1,41 +1,76 @@
-> 本篇文章不聊技术，纯扯淡
+> 本篇文章不聊技术，纯扯淡哈
 
-毕业季已经过去三个月了，九月份来临啦，一大波大三的鲜肉（对我来说，你们还是鲜肉，狗头.jpg）正式成为大学里的老学长、老学姐啦，即将下架啦 哈哈哈哈，不过不要伤心，因为还有更伤心的，招聘大军来临啦，大四上学期的招聘对很多人来说，应该是第一次面对社会的大门，兴奋、紧张、害怕等等情绪开始飙升~
+毕业季已经过去三个月了，九月份来临啦，一大波大三的鲜肉（对我来说，你们还是鲜肉，狗头.jpg）正式成为大学里的老学长、老学姐啦，即将下架啦， 哈哈哈哈，不过不要伤心，因为还有更伤心的，招聘大军来临啦，大四上学期的招聘对很多人来说，应该是第一次面对社会的大门，兴奋、紧张、害怕等等情绪开始飙升~
 
-说了一小段，先简单介绍下自己，免得大家以为我也是毕业季的小鲜肉，作为一枚14届毕业生，在社会的大池子里奋(ban)斗(zhuan)有四年多啦，是一名程序猿，目前在前端领域混饭吃，曾经也在后端混过一小段时间，四年里换了三家公司，包括刚毕业第一次找工作，算是经历了3次找工作啦，回味下这四年的历程。
+说了一小段，还没介绍自己呢，简单介绍下自己，免得大家以为我也是毕业季的小鲜肉，是一枚14届毕业生，在社会的大池子里奋(ban)斗(zhuan)有四年多啦，一名程序猿，目前在前端领域混饭吃，曾经也在后端混过一小段时间，四年里换了三家公司，包括刚毕业第一次找工作，算是经历了3次找工作啦，回味下这四年的历程。
 
 ### 刚毕业那会
-先回忆下刚毕业那会，那是秋高清爽的10月，作为一个普通二本院校的花朵，不打算考研，其实是考不上，所以找工作便成了大四的首要任务，因为离武汉比较近，跟着几个充满朝气的小伙伴直奔武汉，两小时的动车后，在加一小时的地铁后，我们到了光谷，在地大旁边落下了脚，光谷这一块有着好几所吊炸天的大学，武大、华科、地大，还有好几所二本院校，可以说是大学环绕了。第一天我们就逛了逛武大和华科，学校是真的大啊啊啊，走到脚软啊，华科的树是真的大，自行车超级的多
+刚上大四那会，秋高清爽的10月，作为一个普通二本院校的花朵，不打算考研，其实是考不上，所以找工作便成了大四的首要任务，学校离武汉比较近，几个充满朝气的小伙伴一拍手，相约直奔武汉，两小时的动车后，在加一小时的地铁后，我们到了光谷，在地大旁边落下了脚，光谷这一块有着好几所吊炸天的大学，武大、华科、地大，还有好几所二本院校，可以说是大学环绕了。第一天我们逛了逛武大和华科，学校是真的大啊啊啊，走到脚软啊，华科的树是真的大，自行车超级的多
 
 #### 关于笔试
-(⊙o⊙)… 跑题了，现在肥来，当初我们通过一款软件，现在想不起叫啥了，可以查询到各个学校的校招情况，企业、时间、地点等非常清楚，我们选择的宣讲大部分是在武大、华科和武汉理工，毕竟名校嘛。刚开始一周的宣讲会流程基本上是 `企业发言->学生提问->笔试->收答卷和简历->肥家答复`，记得第一次笔试，看到卷子的时候，卧槽完全不懂啊，懵的一逼，连着参加了两场笔试，都是这样的情况，心想这样不行啊，于是在接下来的笔试，悄悄的将卷子带出考场，但不建议大伙这么做哈，或者抄在草稿纸上带出来，回到旅馆立马百度找答案，同时找了好多笔试题，一有空就刷，临时抱佛脚哈哈哈，在接下来的笔试里慢慢有了感觉，毕竟笔试题很容易有重复。
+(⊙o⊙)… 跑题了，现在肥来，当年我们是通过一款软件，来查询到各个学校的校招情况，企业、时间、地点等，现在想不起叫啥了，我们选择的宣讲大部分是在武大、华科和武汉理工，毕竟名校嘛。刚开始一周的宣讲会流程基本上是 `企业发言->学生提问->笔试->收答卷和简历->肥家答复`。
 
-校招的笔试题一般会有两部分，技术题和IQ题，IQ题通俗的说就是脑筋急转弯，这部分就真的考大家的脑回路啦，当年为了这个也挺头疼，不过相比技术题，这部分能答好那是最好，答不出来也关系不大
+记得第一次笔试，看到卷子的时候，卧槽完全不懂啊，懵的一逼，连着参加了两场笔试，都是这样的情况，心想这样不行啊，于是在接下来的笔试，悄咪咪的将卷子带出考场，但不建议大伙这么做哈，或者抄在草稿纸上带出来，回到旅馆立马百度找答案，同时找了好多笔试题，一有空就刷，临时抱佛脚哈哈哈，在接下来的笔试里慢慢有了感觉，毕竟笔试题很容易有重复。
 
-笔试作为筛选的第一关，虽然临时抱佛脚能勉强通过，但稍微绕一下就立马嗝屁了，所以趁现在招聘才刚开始，大伙抓紧补缺查漏，网上多刷刷面经，技术类笔试的，数据结构、排序算法、文件读写，这个三大件必考，文末给大家推荐几个还不错的笔试合集。
+校招的笔试题一般会有两部分，技术题和IQ题，IQ题通俗的说就是脑筋急转弯，这部分就真的考大家的脑回路啦，当年为了这个也挺头疼，现在才刚开始招聘，大家可以抽空刷刷IQ提，不过相比技术题，这部分能答好那是最好，答不出来其实也关系不大
+
+笔试作为筛选的第一关，当年自己虽然临时抱佛脚能勉强通过，但稍微绕一下就立马嗝屁了，所以趁现在招聘才刚开始，大伙抓紧补缺查漏，网上多刷刷面经，技术类笔试的，数据结构、排序算法、文件读写，这个三大件必考。
 
 
 #### 关于面试
 在武汉这段时间里，大概参加了快20多场笔试，通过第一轮笔试的大概有10多场这样吧，过了笔试，接下来要么是面试，要么是第二轮的笔试，不过大部分是面试环节，我经历过的面试有这么几种形式的，HR面、技术面、群面、无领导小组讨论、远程视频面
+##### HR面
+出现频率最高的问题就是，你的职业规划是怎么样的？当初的我是这么回答的：5到7年努力学习技术，然后在往管理层发展，balabala，现在回想起来，当初还真是太年轻呀。其实hr并不在乎你的真正的职业规划是啥，想考察的是面试者表达能力，毕竟到了公司，要是连基本的表达能力都不OK，那就坑队友了，沟通能力是非常重要的。
+##### 技术面
+一般由一个或者两个工程师面，问的问题就千奇百怪啦，主要取决于面试官，不过问的问题一般都不会太难，大部分是些实用的技术点，难一点的就是数据结构的基础，复杂的算法，很少会问。同时回答问题的时候态度一定要有，不懂就是不懂，懂得就要能清晰表达出来，所以打好基础，不要慌乱，这一关，就能过去。
 
-HR面：出现频率最高的问题就是，你的职业规划是怎么样的？当初的我是这么回答的：5到7年努力学习技术，然后在往管理层发展，balabala，现在回想起来，当初还真是太年轻呀。其实hr并不在乎你的真正的职业规划是啥，想考察的是面试者表达能力，毕竟到了公司，要是连基本的表达能力都不OK，那就坑队友了，沟通能力是非常重要的。
+##### 远程视频面
+有些公司为了减轻招聘成本，外地宣讲等由hr负责，到了面试环节就通过远程视频来面试。我有过一次视频面试，在一个还不错的酒店房间里，在一台笔记本前坐着，静静的等了一小会，突然喂喂的两声，两个标准it男出现，当时感觉两位面试官大佬有点憔悴的样子，也不知道是不是镜头的原因，有一个头发稍微有点秃，当时第一感觉就是，啊，他们好辛苦啊！面试开始，balabala，有个面试官问道：你对加班怎么看？当时脑子一热，答：我觉得加班是由于工作效率出了问题，所以才要加班的 。。。。一段话说完，屏幕里的面试官表情好像就不是很好，我知道我over了，那次视频据说是最后一面啊，就这么被自己坑了。视频面试跟真人面对面差别不大，要稍微注意一点就是，说话的语速要稍微放慢一点，说话时不要身体不要晃，不然对面的人会看着很晕。 
 
-技术面：一般由一个或者两个工程师面，问的问题就千奇百怪啦，主要取决于面试官，不过问的问题一般都不会太难，大部分是些实用的技术点，难一点的就是数据结构的基础，复杂的算法，很少会问。同时回答问题的时候态度一定要有，不懂就是不懂，懂得就要能清晰表达出来，所以打好基础，不要慌乱，这一关，就能过去。
+##### 群面
+我遇到群面都是hr面，五个左右的面试者排排坐，一起同时面试，面试官提出问题后，要么让大家自由回答，要么是按顺序依次回答，这种面试，考察大伙的反应力和表现力，脑子快的人可以承包好几个优秀回答，给大家的建议是不要急着抢答，想好再答，尽量每个问题都能搭上两句话，要给面试官留下存在感。
 
-远程视频面：有些公司为了减轻招聘成本，外地宣讲等由hr负责，到了面试环节就通过远程视频来面试。我有过一次视频面试，在一个还不错的酒店房间里，在一台笔记本前坐着，静静的等了一小会，突然喂喂的两声，两个标准it男出现，当时感觉两位面试官大佬有点憔悴的样子，也不知道是不是镜头的原因，有一个头发稍微有点秃，当时第一感觉就是，啊，他们好辛苦啊！面试开始，balabala，有个面试官问道：你对加班怎么看？当时脑子一热，答：我觉得加班是由于工作效率出了问题，所以才要加班的 。。。。一段话说完，屏幕里的面试官表情好像就不是很好，我知道我over了，那次视频据说是最后一面啊，就这么被自己坑了。视频面试跟真人面对面差别不大，要稍微注意一点就是，说话的语速要稍微放慢一点，说话时不要身体不要晃，不然对面的人会感觉头晕。 
+##### 无领导小组讨论
+当年有些企业挺喜欢玩这个的，不知道现在还有没有。一般10人左右一组，面试官会给出一个话题，比如说，大海上，船翻了，有老人、小孩、孕妇、企业家、科学家等，救生艇只能载若干个人，需要抛弃几个人，问抛弃谁？ 这种话题，往往都是没有标准答案的，思考的角度不同，结果也就不同。给出问题后，面试官让大家在规定时间内自由谈论，结束后派出一个代表来陈述小组的最终结论，讨论过程，面试官不参与，会在旁边看着。
 
-群面：我遇到群面都是hr面，五个左右的面试者排排坐，一起同时面试，面试官提出问题后，要么让大家自由回答，要么是按顺序依次回答，这种面试，考察大伙的反应力和表现力，脑子快的人可以承包好几个优秀回答，给大家的建议是不要急着抢答，想好再答，尽量每个问题都能搭上两句话，要给面试官留下存在感。
-
-无领导小组：当年有些企业挺喜欢玩这个的，不知道现在还有没有。一般10人左右一组，面试官会给出一个话题，比如说，大海上，船翻了，有老人、小孩、孕妇、企业家、科学家等，救生艇只能载若干个人，需要抛弃几个人，问抛弃谁？ 这种话题，都是没有标准答案的，思考的角度不同，结果也就不同。给出问题后，面试官让大家在规定时间内自由谈论，结束后派出一个代表来陈述小组的最终结论，讨论过程，面试官不参与，会在旁边看着。简单来说就是小组讨论，代表陈述。如果你是想通过这关的，那在讨论中就要积极的表现自己，且要坚定自己的立场，但是积极也要有个度，适当的谦让，要表现出一个有想法又愿意听取意见的人，最后选代表的时候，脸皮厚一点，快速站出来，别人看到有人先了一步，一般都会退让，哈哈，这就是竞争，谁快谁就能抓住机会。
+简单来说就是小组讨论，代表陈述。如果你是想漂亮的通过这关，那在讨论中就要积极的表现自己，且要坚定自己的立场，同时积极也要有个度，适当的谦让，要表现出一个有想法又愿意听取意见的人，最后选代表的时候，脸皮厚一点，快速站出来，别人看到你先了一步，一般都会退让，哈哈，这就是竞争，谁快谁就能抓住机会。
 
 #### 关于选择
-当初我的选择是地域优先，最好是深圳，广州次之。做IT这行，选择很重要，我是建议大家超一线城市优先，尽量留在大城市，毕竟大城市给我们的选择会更多，会带来更多机遇，只要好好努力，能让自身的更快的成长和提供见识的广度，有些小伙伴会说房价高啊，但这不就是我们奋斗的目标么？关于大公司还是小公司的选择，我是建议，毫不犹豫选择大公司，对应刚毕业的你来说，在任何一家公司面前你都是白纸，大公司对于刚毕业的新人来说有足够的成长空间，而所谓的螺丝钉对新人来说还差的远，还有就是大公司的工作流程、组织架构、旁边的优秀小伙伴，这些都是不可多得的资源啊，还有啥犹豫的。要是还纠结螺丝钉，等你把公司里能接触到的，优秀的东西掌握了，觉得自己上升受阻，可以选择跳槽，而大公司跳槽出去，你比别人就多了一层金，我们经常听到的，说某某某是腾讯出来的呀，就是这么来的，所以这么一来给便自己加持个buff，薪资保证被安排妥妥的，而且我认识的小伙伴进入大厂后的跳槽还是在大厂间跳。用一句话说，要出名，得趁早~   
+当初我的选择是地域优先，最好是深圳，广州次之。做IT这行，选择很重要，我是建议大家超一线城市优先，尽量留在大城市，毕竟大城市给我们的选择会更多，带来更多机遇，只要好好把握，能让自身的更快的成长和提供见识的广度，有些小伙伴会说房价高啊，可这不就是我们奋斗的目标么？
 
-### 第一次跳槽
-我在工作了一年后，感觉
+关于大公司还是小公司的选择，我是建议，毫不犹豫选择大公司，对应刚毕业的你来说，在任何一家公司面前你都是白纸，大公司对于刚毕业的新人来说有足够的成长空间，而所谓的螺丝钉对新人来说还差的远，还有就是大公司的工作流程、组织架构、旁边的优秀小伙伴，这些都是不可多得的资源啊，还有啥犹豫的。要是还纠结螺丝钉，等你把公司里能接触到的，优秀的东西掌握了，觉得自己上升受阻，可以选择跳槽，而大公司跳槽出去，你比别人就多了一层金，我们经常听到的，说某某某是腾讯出来的呀，就是这么来的，所以这么一来给便自己加持个buff，薪资保证被安排妥妥的，而且我认识的小伙伴进入大厂后的跳槽还是在大厂间跳。用一句话说，要出名，得趁早~   
 
-### 第二次跳槽
+### 步入社会以后
+毕业以后跳了两次槽，互联网行业跳槽率非常高，在这两次跳槽中也面试了不少公司，社招与校招的区别非常大，校招看重的是你的学历、学校及非技能项的能力，招收后培养为主。社招相反，看重的是你的技能树、履历，来了要能干活，要能给公司带来产出
 
-### 面试经验
+### 关于简历
+在社会的池子里滚打过一段时间后，我们就变成一件商品了，虽然这说法有点俗气哈，简历就是商品的简介，那么学会包装自己，呈现自己的亮点，漂亮的简历才能吸引人。
+
+关于简历怎么写就不多说啦，网上的教程非常多。但要注意一点，包装并不是吹牛的意思，合理的包装要建立在事实的基础上，这个度要掌握好。
+
+#### 薪资待遇
+先说说大伙最感兴趣的薪资，老司机常说，刚步入社会不要太在乎薪资，先好好学。我同意后半句，前半句不太认同，薪资才是我们工作的动力，是美好生活的基石啊。在谈薪资这一环节，很多人都不好意思开口，薪资自然就不是最理想的。我认为谈薪资的打开方式应该是这样
+
+- 学会谈判，薪资是谈出来的，公司是商业化的，我们为公司带来产出，理应得到相应的回报，所以不要拘谨，大胆说出自己的价码，在好好的谈。
+
+- 定价的薪资尽量比自己的能力稍微高一些，一方面是避免公司压价，一方面是为了逼自己一把，毕竟薪资大于能力对个人的压力和动力那是非常足的。
+
+####  面试与笔试
+这两次跳槽全都是面试，没有笔试，面试给我最大感触就是，不管面的是大公司还是小公司，首先要表现出自信和清晰的谈吐，毕竟面试你的往往就是的组长或者同事，入职便是队友了。大家都想遇到个给力好相处的队友。所以面试前精气神要打足。
+
+社招面试中有两个比较令人头大的问题
+
+1. 你为什么从上家公司离职呢？
+
+参考回答一般是，平台太小，想要更好的发展，只要多表达正能量，积极向上就可以，但不能说上家公司的坏话，这是职场基本素养，当然除了拖欠工资外。
+
+2. 你有什么问题想问我们的呢？
+
+这可是个有心机的问题啊，一方面可以看出你是不是有了解过公司，是不是对这个职位真的有兴趣；还可以看出你对这个工作的态度。同时，既然是问答，那么对我们也是了解对方的机会
+
+可以从这几个方面去提问，大的层面，公司的发展计划、公司的盈利模式等，毕竟公司赚钱了，我们才能安稳上班啊；所在部门的情况，小组人员结构、负责的业务等，这个将是跟我们工作息息相关的；技术方面的，可以问下小组使用那些技术栈，以后的技术路线等。这些问下来，如果面试官不吹牛的话，我们对这家公司也算是能够有个基本的了解了。
 
 ### 小结
+借着掘金征文的这一波节奏，把自己这几年里，把从最初的求职到跳槽的小小历程，写成一个小记。哈哈，写的有点长，有点啰嗦。
+
+本次征文活动的链接  https://juejin.im/post/5b923adb5188255c6666c77b
