--- a/【面试官问】你懂函数式编程吗？.md
+++ b/【面试官问】你懂函数式编程吗？.md
@@ -1,7 +1,7 @@
-> 面试官：你好，你有用过函数式编程吗？
-我：函数式？没有呢？
-面试官：那有了解过吗？
-我：额。。。也没有，贵公司主要使用函数式编程么？
+> 面试官：你好，你有用过函数式编程吗？</br>
+我：函数式？没有呢？</br>
+面试官：那有了解过吗？</br>
+我：额。。。也没有，贵公司主要使用函数式编程么？</br>
 面试官：嗯，不怎么使用，但我就是想问
 
 又到了面试的季节，相比很多小伙伴会被面试官一顿连环问，面试造火箭，进去拧螺丝，可想要顺利入职还是得硬着头皮把火箭造出来才行。
@@ -176,15 +176,45 @@ export default function pipe() {
 }
 // 封装的层次比较多，就不一一展开了
 ```
-ramda 自己实现了reduce，所以兼容性也是OK的。
+ramda 自己实现了reduce，所以兼容性也是OK。
 
-至于 `compose` 的函数执行顺序是从左到右还是右到左，这个无非是把传入的函数做个顺序调换。
+至于 `compose` 的函数执行顺序是从左到右还是右到左，这个无非是把执行的顺序做个调换。
 
 
 ### compose 应用
-函数组合的使用场景还是多的，常见的数据处理，只要修改函数因子就可以输入不同的结果，不需要修改原有流程。
+函数组合的使用场景还是多的，常见的数据处理，只要修改函数因子就可以输入不同的结果，不需要修改原有流程。我写个简单的小栗子
 
-我们来看下 `koa2` 通过 `compose` 实现的洋葱模型，可以说是非常巧妙了，部分代码如下
+```javascript
+// 因为我喜欢从左到右的顺序执行，所以 reduce 里的顺序稍微调换了下
+function compose(...funcs) {
+    if (funcs.length === 0) {
+        return arg => arg
+    }
+
+    if (funcs.length === 1) {
+        return funcs[0]
+    }
+
+    return funcs.reduce((a, b) => {
+      return  (...args) => b(a(...args)) // 从左到右的顺序执行
+    })
+}
+
+function fristName(name){
+    return name.split(' ')[0]
+}
+function upperCase(string){
+    return string.toUpperCase()
+}
+function reverse(string){
+    return string.split('').reverse().join('')
+}
+
+console.log(compose(fristName,upperCase,reverse)('xiao li')) // OAIX
+```
+用起来还是非常顺手的，相信大家基于 compose 写出很多有意思的代码。
+
+我们来看下牛逼的 `koa2`框架是怎么通过 `compose` 实现的洋葱模型，我觉得非常巧妙，是koa的精髓部分，部分代码如下
 ```javascript
 // https://github.com/koajs/koa/blob/master/lib/application.js
  /**
