--- a/面试官让我解释前端模块化.md
+++ b/面试官让我解释前端模块化.md
@@ -1,7 +1,7 @@
 
-先说说什么是模块化，就是独立的功能代码封装成一个独立的模块，独立的文件，其他模块需要使用，在进行引用。
+先说说什么是模块化，就是将独立的功能代码封装成一个独立的文件，其他模块需要使用，在进行引用。
 
-模块化有利于代码的拆分和架构上的解耦，模块化在服务端领域已经早已成熟，nodejs 也实现了模块化。
+模块化有利于代码的拆分和架构上的解耦，模块化在服务端领域已经早已成熟，nodejs 也已经支持模块化。
 
 而在浏览器上，js 脚本是异步载入的，脚本按照编码顺序依次执行，依赖关系只能按照编码顺序来控制。因此前端早早就有了模块化技术，可每天醒来前端就多一个名词多一个框架的，发展实在迅猛，就前端模块化这些年的积累就有好几种，我们依次来看看。
 
@@ -62,9 +62,7 @@ module 中有这些属性
 
 2. 如果参数字符串以“./”开头，则表示加载的是一个位于相对路径（跟当前执行脚本的位置相比）的模块文件。比如，require('./circle')将加载当前脚本同一目录的circle.js。
 
-3. 如果参数字符串不以“./“或”/“开头，则表示加载的是一个默认提供的核心模块（位于Node的系统安装目录中），或者一个位于各级node_modules目录的已安装模块（全局安装或局部安装）。大家还记得 module.paths 吧，这里就派上用场了。
-
-举例来说，脚本/home/user/projects/foo.js执行了require('bar.js')命令，Node会依据 module.paths 路径加上文件名称，依次搜索。
+3. 如果参数字符串不以“./“或”/“开头，则表示加载的是一个默认提供的核心模块（位于Node的系统安装目录中），或者一个位于各级node_modules目录的已安装模块（全局安装或局部安装）。大家还记得 module.paths 吧，这里就派上用场了。举例来说，脚本/home/user/projects/foo.js执行了require('bar.js')命令，Node会依据 module.paths 路径加上文件名称，依次搜索。
 这样设计的目的是，使得不同的模块可以将所依赖的模块本地化。
 
 4. 如果参数字符串不以“./“或”/“开头，而且是一个路径，比如require('example-module/path/to/file')，则将先找到example-module的位置，然后再以它为参数，找到后续路径。
@@ -182,9 +180,9 @@ end fun { age: 10 }
 
 
 ### ES6 模块化
-ES6 ，ECMA推出了官方标准的模块化解决方案，使用 export 导出，import 导入，编码简洁，从语义上更加通俗易懂。
+ECMA推出了官方标准的模块化解决方案，使用 export 导出，import 导入，编码简洁，从语义上更加通俗易懂。
 
-ES6 的模块不是对象，而是在编译的时候就完成模块的引用，所以是编译时加载的。它是异步加载模块
+ES6 支持异步加载模块 的模块不是对象，而是在编译的时候就完成模块的引用，所以是编译时才加载的。
 
 个人认为，ES6模块化是以后的主流。
 
@@ -220,7 +218,7 @@ console.log('end fun', object)
 }
 ```
 
-在使用 browserify 对模块进行转换
+在使用 browserify 对模块规范进行转换。
 
 2. 若使用 webpack ，webpack 是支持 es6 模块化的，所以就只要引用 babel-loader ，对 es6 的语法做处理即可
 
@@ -259,7 +257,7 @@ module: change
 ```
 可见，模块内部函数改变了模块内的对象，外部导出使用的对象也跟着发生了变化，这一点是和 commonjs 规范区别最大的地方，这个特性可用于状态提升。
 
-#### ES6 模块规范和 commonjs规范 运行机制的区别
+#### ES6 模块规范和 commonjs 规范 运行机制的区别
 CommonJS 模块是运行时加载，ES6 模块是编译时输出接口
 
 - 运行时加载: CommonJS 模块就是对象；即在输入时是先加载整个模块，生成一个对象，然后再从这个对象上面读取方法，这种加载称为“运行时加载”。
@@ -269,7 +267,7 @@ CommonJS 模块是运行时加载，ES6 模块是编译时输出接口
 CommonJS 加载的是一个对象（即module.exports属性），该对象只有在脚本运行完才会生成。而 ES6 模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段就会生成。
 
 ### AMD-require.js 和 CMD-sea.js
-AMD和CMD这两个规范都离不开 require.js 和 sea.js，早些年，为了解决异步加载模块而诞生的方案。
+聊到 AMD 和 CMD 这两个规范都离不开 require.js 和 sea.js，这是早些年，为了解决浏览器异步加载模块而诞生的方案。随着打包工具的发展，commonjs和es6都可以在浏览器上运行了，所以 AMD、CMD 将逐渐被替代。
 
 AMD规范的模块化：用 require.config()指定引用路径等，用define()定义模块，用require()加载模块。
 
@@ -277,9 +275,7 @@ CMD规范的模块化：用define()定义模块， seajs.use 引用模块。
 
 具体的介绍的可以看[这一篇](https://juejin.im/post/5aaa37c8f265da23945f365c#heading-5)，写的非常详细。
 
-
-
-### 插件对模块兼容处理
+### 模块兼容处理
 我们开发插件时可能需要对各种模块做支持，我们可以这么处理
 
 ```JavaScript
