--- a/倒计时的那些坑.md
+++ b/倒计时的那些坑.md
@@ -84,7 +84,7 @@ function watchTimeInterval(time, point, func, timeOverFunc) {
 
 ![new-stop-time](./image/interval/new-stop-time.gif)
 
-这下就算浏览器切到了后台，最后的执行时间仍在预设范围内，哈哈，解决，下班~ 没有咱解决不了的bug（嘘~这句话可别让产品听到了）
+<!-- 这下就算浏览器切到了后台，最后的执行时间仍在预设范围内，哈哈，解决，下班~ 没有咱解决不了的bug（嘘~这句话可别让产品听到了） -->
 
 ### 第二种场景
 熟悉js事件循环的小伙伴都知道，js中的异步事件是通过一个循环队列来实现的，定时器的回调函数会进入到宏队列中，等待被执行，所以定时器的执行时间并不是百分百准确的，如果主线程被阻塞（我们这里暂时先不考虑这种情况）或者循环队列有多个任务，或其中有耗时的操作，那么定时器就会慢慢变得有误差。
@@ -216,6 +216,7 @@ class SuspendTimeObserve {
      */
     update(passTime) {
         var leftCountdownTime = this.countdownTime - passTime;
+        if (leftCountdownTime < 0) leftCountdownTime = 0
         this.item.run && this.item.run({ leftCountdownTime, passTime });
         return leftCountdownTime <= 0;
     }
@@ -237,7 +238,7 @@ class Plan {
         this.item.querySelector('#runtime').innerHTML = 'runtime= '+time/1000 + '秒  '
     }
     run({ leftCountdownTime }) {
-        if (leftCountdownTime > 0) {
+        if (leftCountdownTime >= 0) {
             this.item.querySelector('#currentTime').innerHTML = 'currentTime= '+ moment().format('YYYY-MM-DD HH:mm:ss');
         }
     }
@@ -258,7 +259,7 @@ suspendTimeNotify.start()
 document.querySelector('#current').innerHTML = 'current= '+moment().format('YYYY-MM-DD HH:mm:ss');
 ```
 
-### 小结
+<!-- ### 小结
 这篇文章涉及的知识点比较简单，用简单的方式去解决一些小问题，文章中封装的函数和类，大家可以尝试试copy拿去使用。
 
 #### 给我公号打个广告
@@ -266,4 +267,4 @@ document.querySelector('#current').innerHTML = 'current= '+moment().format('YYYY
 
 欢迎小伙伴们给个关注~ 
 
-![wx-code](./image/wx-code.png)
+![wx-code](./image/wx-code.png) -->
